crates/bro-cli/src/fleet_tui/snapshots/bro__fleet_tui__tests__markdown_grid_w40.snap
---
source: crates/bro-cli/src/fleet_tui/tests.rs
expression: grid
---
"Heading One                             "
"                                        "
"Some bold and italic and inline code    "
"prose that runs on a bit so it has a    "
"chance to wrap at narrower widths.      "
"                                        "
"- first bullet                          "
"- second bullet with a link             "
"(https://example.com/some/long/path)    "
"                                        "
"1. ordered one                          "
"2. ordered two                          "
"▌ a blockquote line spanning two lines  "
"┌───────┬───────┬───────┐               "
"│ Col A │ Col B │ Count │               "
"├───────┼───────┼───────┤               "
"│ alpha │ beta  │ 3     │               "
"│ gamma │ delta │ 12    │               "
"└───────┴───────┴───────┘               "
"┌─ rust                                 "
"│ fn main() {                           "
"│     println!("hello");                "
"│ }                                     "
"└─                                      "
"────────────────────────────────────────"
"────────                                "
"Trailing paragraph.                     "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
