crates/bro-cli/src/fleet_tui/snapshots/bro__fleet_tui__tests__markdown_styled_w40.snap
---
source: crates/bro-cli/src/fleet_tui/tests.rs
expression: dump_lines(&lines)
---
[b,u]Heading One[/]

Some [b]bold[/] and [i]italic[/] and [White]inline code[/] prose that runs on a bit so it has a chance to wrap at narrower widths.

- first bullet
- second bullet with a link ([Blue,u]https://example.com/some/long/path[/])

[LightBlue]1. [/]ordered one
[LightBlue]2. [/]ordered two
[DarkGray]▌ [/]a blockquote line spanning two lines
[DarkGray]┌───────┬───────┬───────┐[/]
[DarkGray]│[/][White,b] Col A [/][DarkGray]│[/][White,b] Col B [/][DarkGray]│[/][White,b] Count [/][DarkGray]│[/]
[DarkGray]├───────┼───────┼───────┤[/]
[DarkGray]│[/][Gray] alpha [/][DarkGray]│[/][Gray] beta  [/][DarkGray]│[/][Gray] 3     [/][DarkGray]│[/]
[DarkGray]│[/][Gray] gamma [/][DarkGray]│[/][Gray] delta [/][DarkGray]│[/][Gray] 12    [/][DarkGray]│[/]
[DarkGray]└───────┴───────┴───────┘[/]
[DarkGray]┌─ rust[/]
[DarkGray]│ [/][Rgb(203, 166, 247)]fn[/][Rgb(205, 214, 244)] [/][Rgb(137, 180, 250)]main[/][Rgb(147, 153, 178)]([/][Rgb(147, 153, 178)])[/][Rgb(205, 214, 244)] [/][Rgb(147, 153, 178)]{[/]
[DarkGray]│ [/][Rgb(205, 214, 244)]    [/][Rgb(137, 180, 250)]println![/][Rgb(147, 153, 178)]([/][Rgb(166, 227, 161)]"[/][Rgb(166, 227, 161)]hello[/][Rgb(166, 227, 161)]"[/][Rgb(147, 153, 178)])[/][Rgb(147, 153, 178)];[/]
[DarkGray]│ [/][Rgb(147, 153, 178)]}[/]
[DarkGray]└─[/]
[DarkGray]────────────────────────────────────────────────[/]
Trailing paragraph.
