crates/bro-cli/src/fleet_tui/snapshots/bro__fleet_tui__tests__transcript_grid_w40.snap
---
source: crates/bro-cli/src/fleet_tui/tests.rs
expression: grid
---
"▌ this is a fairly long initial         "
"▌ steer prompt that should word-wrap    "
"▌ across several lines at the narrow    "
"▌ forty-column width                    "
"                                        "
"Here is a plan with emphasis and a code "
"token.                                  "
"                                        "
"✻ considering the edge cases            "
"✻ and the wrapping                      "
"                                        "
"▸ file_edit(src/lib.rs)                 "
"- let x = 1;                            "
"+ let x = 2;                            "
"▸ shell_run(cmd: "cargo test")          "
"    error[E0001]: something broke       "
"      --> src/lib.rs:1                  "
"                                        "
"Done. See the docs                      "
"(https://example.com/docs) for details. "
"                                        "
"                                        "
"▌ a queued turn                         "
"▌ queued to stdin; waiting for harness  "
"echo                                    "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
